# aeonix-compiler

./: .gitignore  Cargo.toml  README.md  build.zig  test.bpf.c  test.rs  test.snx  vmlinux.h
docs/: ast.md  compiler-architecture.md  ir.md  keywords.md  roadmap.md  syntax.md
examples/: ebpf-demo.aex  fib.snx  hello.aex
solnix-compiler-v0.1.0-preview/: README.md  solnixc
src/: ast.zig  build.rs  cli.zig  compiler.rs  compiler.zig  diagnostics.rs  diagnostics.zig  ir.zig  lexer.zig  llvm.zig  main.rs  main.zig  parser.zig  source_manager.rs
src/ast/: ast.zig  map.rs  map.zig  mod.rs  mod.zig  program.rs  program.zig  unit.rs  unit.zig
src/backend/ebpf/: codegen.zig
src/backend/elf/: writer.zig
src/codegen/: asm_utils.zig  ebpf.rs  ebpf.zig  x86_64.zig
src/codegen/ebpf/: unit.zig
src/compiler/: driver.zig
src/elf/: layout.zig  writer.zig
src/elf/section/: cgroup.zig  tc.zig  tracepoint.zig  xdp.zig
src/emit/: mod.rs  util.rs
src/emit/ebpf_c/: cgroup.rs  fentry.rs  helpers.rs  kprobe.rs  sk.rs  (+9 more)
src/frontend/: lexer.zig  parser.zig  sema.zig
src/ir/: instruction.rs  ir.zig  mod.rs  mod.zig  program.rs  unit.rs  unit.zig
src/lexer/: lexer.zig  mod.rs
src/llvm/: llvm.rs  mod.rs
src/middle/: ir.zig
src/parser/: map.rs  map.zig  mod.rs  mod.zig  parser.rs  parser.zig  program.rs  program.zig  token.rs  token.zig  unit.rs  unit.zig
src/sema/: map.rs  map.zig  mod.rs  mod.zig  section.rs  section.zig  unit.rs  unit.zig
src/utils/: diagnostics.zig  file.zig  strings.zig
std/: io.aex
tests/: codegen_test.zig  lexer_test.zig  parser_test.zig
