[package]
name    = "solnix-compiler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solnixc"
path = "src/main.rs"

[dependencies]
anyhow   = "1.0"  
thiserror = "1.0"
miette   = { version = "7.0", features = ["fancy"] }
goblin = "0.8"
tempfile = "3.10"
clap = { version = "4.5", features = ["derive"] }
